--- a/data_manipulation/weather/dialogue_to_json.ipynb
+++ b/data_manipulation/weather/dialogue_to_json.ipynb
@@ -3216,6 +3216,392 @@
     "dddd = temp_weather_semi_array['hot'].to_dict()\n",
     "dddd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>text</th>\n",
+       "      <th>tag1</th>\n",
+       "      <th>tag2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>name</td>\n",
+       "      <td>Hubert</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>好热啊，要吃个冰棒吗？今天气温有{temp_c}。</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>今天气温有{temp_c}，真的是要死人了。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>希望这是今年的最高温，{temp_c}。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>这种温度，甚至想要去搬去极寒气候的地方住了。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>{temp_c}。听说你们那里有不错的降温设备，不知道和冰系魔法有没有什么关系？</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>气温还可以，{temp_c}，很舒服。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>气温为{temp_c}，我喜欢热一点，但这种温度确实也很舒服。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>今天温度是{temp_c}，希望可以再这样持续一阵。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>{temp_c}。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>{temp_c}，这样的气温可以做很多事情。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                key                                      text  tag1  tag2\n",
+       "0              name                                    Hubert   1.0   2.0\n",
+       "1               hot                 好热啊，要吃个冰棒吗？今天气温有{temp_c}。   3.0   NaN\n",
+       "2               hot                    今天气温有{temp_c}，真的是要死人了。   NaN   NaN\n",
+       "3               hot                      希望这是今年的最高温，{temp_c}。   NaN   NaN\n",
+       "4               hot                    这种温度，甚至想要去搬去极寒气候的地方住了。   NaN   NaN\n",
+       "5               hot  {temp_c}。听说你们那里有不错的降温设备，不知道和冰系魔法有没有什么关系？   NaN   NaN\n",
+       "6   good_tempreture                       气温还可以，{temp_c}，很舒服。   NaN   NaN\n",
+       "7   good_tempreture           气温为{temp_c}，我喜欢热一点，但这种温度确实也很舒服。   NaN   NaN\n",
+       "8   good_tempreture                今天温度是{temp_c}，希望可以再这样持续一阵。   NaN   NaN\n",
+       "9   good_tempreture                                 {temp_c}。   NaN   NaN\n",
+       "10  good_tempreture                    {temp_c}，这样的气温可以做很多事情。   NaN   NaN"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_weather = pd.read_csv('test_weather_dialogue.csv')\n",
+    "temp_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'good_tempreture': [['气温还可以，{temp_c}，很舒服。', [nan, nan]],\n",
+       "  ['气温为{temp_c}，我喜欢热一点，但这种温度确实也很舒服。', [nan, nan]],\n",
+       "  ['今天温度是{temp_c}，希望可以再这样持续一阵。', [nan, nan]],\n",
+       "  ['{temp_c}。', [nan, nan]],\n",
+       "  ['{temp_c}，这样的气温可以做很多事情。', [nan, nan]]],\n",
+       " 'hot': [['好热啊，要吃个冰棒吗？今天气温有{temp_c}。', [3.0, nan]],\n",
+       "  ['今天气温有{temp_c}，真的是要死人了。', [nan, nan]],\n",
+       "  ['希望这是今年的最高温，{temp_c}。', [nan, nan]],\n",
+       "  ['这种温度，甚至想要去搬去极寒气候的地方住了。', [nan, nan]],\n",
+       "  ['{temp_c}。听说你们那里有不错的降温设备，不知道和冰系魔法有没有什么关系？', [nan, nan]]],\n",
+       " 'name': [['Hubert', [1.0, 2.0]]]}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_weather.groupby(['key'])[['text', 'tags']].apply(lambda g: g.values.tolist()).to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'key': 'name', 'text': 'Hubert'},\n",
+       " {'key': 'hot', 'text': '好热啊，要吃个冰棒吗？今天气温有{temp_c}。'},\n",
+       " {'key': 'hot', 'text': '今天气温有{temp_c}，真的是要死人了。'},\n",
+       " {'key': 'hot', 'text': '希望这是今年的最高温，{temp_c}。'},\n",
+       " {'key': 'hot', 'text': '这种温度，甚至想要去搬去极寒气候的地方住了。'},\n",
+       " {'key': 'hot', 'text': '{temp_c}。听说你们那里有不错的降温设备，不知道和冰系魔法有没有什么关系？'},\n",
+       " {'key': 'good_tempreture', 'text': '气温还可以，{temp_c}，很舒服。'},\n",
+       " {'key': 'good_tempreture', 'text': '气温为{temp_c}，我喜欢热一点，但这种温度确实也很舒服。'},\n",
+       " {'key': 'good_tempreture', 'text': '今天温度是{temp_c}，希望可以再这样持续一阵。'},\n",
+       " {'key': 'good_tempreture', 'text': '{temp_c}。'},\n",
+       " {'key': 'good_tempreture', 'text': '{temp_c}，这样的气温可以做很多事情。'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_weather.to_dict(orient = 'records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tag1    [1.0, 3.0]\n",
+       "tag2         [2.0]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_weather.iloc[:, 2:len(temp_weather.columns)].apply(lambda x: x.dropna().tolist(), axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>text</th>\n",
+       "      <th>tag1</th>\n",
+       "      <th>tag2</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>name</td>\n",
+       "      <td>Hubert</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[1.0, 2.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>好热啊，要吃个冰棒吗？今天气温有{temp_c}。</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[3.0, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>今天气温有{temp_c}，真的是要死人了。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>希望这是今年的最高温，{temp_c}。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>这种温度，甚至想要去搬去极寒气候的地方住了。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>hot</td>\n",
+       "      <td>{temp_c}。听说你们那里有不错的降温设备，不知道和冰系魔法有没有什么关系？</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>气温还可以，{temp_c}，很舒服。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>气温为{temp_c}，我喜欢热一点，但这种温度确实也很舒服。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>今天温度是{temp_c}，希望可以再这样持续一阵。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>{temp_c}。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>good_tempreture</td>\n",
+       "      <td>{temp_c}，这样的气温可以做很多事情。</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[nan, nan]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                key                                      text  tag1  tag2  \\\n",
+       "0              name                                    Hubert   1.0   2.0   \n",
+       "1               hot                 好热啊，要吃个冰棒吗？今天气温有{temp_c}。   3.0   NaN   \n",
+       "2               hot                    今天气温有{temp_c}，真的是要死人了。   NaN   NaN   \n",
+       "3               hot                      希望这是今年的最高温，{temp_c}。   NaN   NaN   \n",
+       "4               hot                    这种温度，甚至想要去搬去极寒气候的地方住了。   NaN   NaN   \n",
+       "5               hot  {temp_c}。听说你们那里有不错的降温设备，不知道和冰系魔法有没有什么关系？   NaN   NaN   \n",
+       "6   good_tempreture                       气温还可以，{temp_c}，很舒服。   NaN   NaN   \n",
+       "7   good_tempreture           气温为{temp_c}，我喜欢热一点，但这种温度确实也很舒服。   NaN   NaN   \n",
+       "8   good_tempreture                今天温度是{temp_c}，希望可以再这样持续一阵。   NaN   NaN   \n",
+       "9   good_tempreture                                 {temp_c}。   NaN   NaN   \n",
+       "10  good_tempreture                    {temp_c}，这样的气温可以做很多事情。   NaN   NaN   \n",
+       "\n",
+       "          tags  \n",
+       "0   [1.0, 2.0]  \n",
+       "1   [3.0, nan]  \n",
+       "2   [nan, nan]  \n",
+       "3   [nan, nan]  \n",
+       "4   [nan, nan]  \n",
+       "5   [nan, nan]  \n",
+       "6   [nan, nan]  \n",
+       "7   [nan, nan]  \n",
+       "8   [nan, nan]  \n",
+       "9   [nan, nan]  \n",
+       "10  [nan, nan]  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_weather['tags'] = temp_weather.iloc[:, 2:len(temp_weather.columns)].values.tolist()\n",
+    "# temp_weather['tags'] = temp_weather.iloc[:, 2:len(temp_weather.columns)].apply(lambda x: x.dropna().tolist(), axis = 0)\n",
+    "temp_weather"
+   ]
   }
  ],
  "metadata": {
